--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@pancakeswap/pancake-swap-lib",
-  "version": "0.0.4",
-  "description": "Pancake Swap Lib",
+  "name": "@hubdao-finance/hubdao-lib",
+  "version": "0.1.0",
+  "description": "Hubdao Lib",
   "files": [
     "contracts",
     "!contracts/test"
   ],
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com:pancakeswap/pancake-swap-lib.git"
+    "url": "https://github.com/hub-dao/hubdao-finance-lib.git"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
